--- a/frontend/Rank-Up/src/app/add-user/add-user.page.html
+++ b/frontend/Rank-Up/src/app/add-user/add-user.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
-    <ion-button class="leftIcon">
+    <ion-button class="leftIcon" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
