--- a/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
+++ b/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
@@ -7,7 +7,7 @@
 
     <div>
       <h1 class="title">[Nome team]</h1>
-      <h5 class="subtitle">Codice: [codice team]</h5>
+      <h2 class="team-code">Codice: [Codice Team]</h2>
     </div>
 
     <ion-button class="rightIcon" fill="clear" [routerLink] = "['/admin-team-settings']">
