--- a/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
+++ b/frontend/Rank-Up/src/app/access-requests-list/access-requests-list.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
 
-    <ion-button class="leftIcon" (click)="backButton()">
+    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
