--- a/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
+++ b/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
     
-    <ion-button class="leftIcon" (click)="backButton()">
+    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
       <ion-icon name="arrow-back-outline" size="large" class="iconaBack"></ion-icon>
     </ion-button>
 
