Added most missing functions to pages 20 to 41

--- a/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
+++ b/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <div class="title" id="div-team-name">{{team_name}}</div>
+    <h1 class="title">{{team_name}}</h1>
     <div id="div-code">Codice: {{team_code}}</div>
 
     <div class="switch">
