--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -14,20 +14,20 @@
     </div>
 
     <div class="buttons">
-      <app-bt-user-small text="Visualizza descrizione" style="padding-right: 1.5vh;" id="descrizione"></app-bt-user-small>
-      <app-bt-user-small text="Aggiungi allegato" style="padding-left: 1.5vh;" id="modalAttached"></app-bt-user-small>
+      <app-bt-user-small text="Descrizione" style="padding-right: 1.5vh;" id="descrizione"></app-bt-user-small>
+      <app-bt-user-small text="Allegato" style="padding-left: 1.5vh;" id="modalAttached"></app-bt-user-small>
     </div>
 
     <div class="confirm">
       <h4 align="center">Inviare richiesta di completamento?</h4>
       <div class="pulsanteBox">
-        <div class="titoloBox" style="padding-right: 3vh;">
+        <div class="titoloBox">
           <ion-button class="pulsante rifiuta">
             <ion-icon name="close-circle-outline"></ion-icon>
           </ion-button>
           <div class="text">Rifiuta</div>
         </div>
-        <div class="titoloBox" style="padding-left: 3vh;">
+        <div class="titoloBox">
           <ion-button class="pulsante conferma" id="conferma">
             <ion-icon name="checkmark-circle-outline"></ion-icon>
           </ion-button>
