--- a/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
+++ b/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
@@ -2,7 +2,7 @@
 <ion-content [fullscreen]="true">
   <div class="back">
     
-    <ion-button class="leftIcon">
+    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
@@ -14,7 +14,7 @@
     <ion-textarea  fill="outline" placeholder="Descrizione" shape="round" [readonly] = true class="descrizione"></ion-textarea>
     <ion-textarea  fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true class="commento"></ion-textarea>
 
-    <app-bt-user-small id="present-alert" class="viewAttached" [text]="'Visualizza allegato'"></app-bt-user-small>
-    <app-bt-user-small class="close" [text]="'Chiudi'"></app-bt-user-small>
+    <app-bt-user-small id="present-alert" class="viewAttached" [text]="'Allegato'"></app-bt-user-small>
+    <app-bt-user-small class="close" [text]="'Chiudi'" (click)="backButton()" fill="clear"></app-bt-user-small>
   </div>
 </ion-content>
