--- a/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
+++ b/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <ion-button class="leftIcon">
+    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
