--- a/frontend/Rank-Up/src/app/components/user-element-bar/user-element-bar.component.scss
+++ b/frontend/Rank-Up/src/app/components/user-element-bar/user-element-bar.component.scss
@@ -12,12 +12,13 @@
     font-size: 22px;
     margin: 0;
     text-align: center;
-    margin-left: 20vh;
+    margin-left: 17vh;
     padding-top: 1vh;
     color: black;
 }
 
 .button {
+    font-weight: bold;
     position: absolute;
     color: black;
     --background: var(--ion-color-user);
