--- a/frontend/Rank-Up/src/app/rule-rejected/rule-rejected.page.scss
+++ b/frontend/Rank-Up/src/app/rule-rejected/rule-rejected.page.scss
@@ -1,9 +1,34 @@
-
-.title{
+.title {
     text-align: center;
-    margin-top: 12vh;
+    margin-top: 8vh;
+    font-weight: bold;
+}
+
+.left-col {
+    margin-right: 1vh;
+}
+
+.right-col {
+    margin-left: 1vh;
+}
+
+.visualize-attached {
+    color: var(--ion-color-white);
+    --background: var(--ion-color-admin);
+    font-size: 22px;
+    --border-radius: 28px;
+
+    height: 64px;
+    width: 150px;
+
+    margin-bottom: 1vh;
+
     color: black;
     font-weight: bold;
+}
+
+.buttons-grid {
+    margin-top: 3vh;
 }
 
 ion-textarea{
@@ -13,13 +38,21 @@ ion-textarea{
     height: 18vh;
     width: 80%;
 
-    margin-top: 4vh;
+    margin-top: 3vh;
+    text-indent: 3vh;
 }
 
 .elementbar {
-    padding-top: 4vh;
     height: 64px;
     width: 90%;
+}
+
+.space-div {
+    margin-top: 2vh;
+}
+
+.div-element-bar {
+    margin-top: 10vh;
 }
 
 .leftIcon {
