--- a/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.html
+++ b/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.html
@@ -1,21 +1,30 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
 
-    <ion-button class="leftIcon"  [routerLink]="['/admin/request-history']">
-      <ion-icon name="arrow-back" size="large"></ion-icon>
+    <ion-button class="leftIcon" fill="clear" (click)="backButton()">
+      <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 align="center" class="title">Task di [nome utente]<p>rifiutato</p>
-    </h1>
+    <h1 class="title">Task di<br/>[Nome Utente] rifiutato</h1>
 
-    <app-admin-element-bar class="taskbar" [buttonText] = "'Task'" [labelText]="'[nome Task]'"></app-admin-element-bar>
-    <app-admin-element-bar class="pointsbar" [buttonText] = "'Punti'" [labelText]="'[punti]'"></app-admin-element-bar>
+    <div class="div-element-bar">
+      <app-admin-element-bar class="elementbar" [buttonText]="'Task'" [labelText]="'[Nome Task]'"></app-admin-element-bar>
+      <div class="space-div"></div>
+      <app-admin-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="'[Punti]'"></app-admin-element-bar>
+    </div>
 
-      <ion-textarea id="descriptionArea" fill="outline" placeholder="     Descrizione" shape="round" [readonly] = true></ion-textarea>
-      <ion-textarea class="descriptionArea" fill="outline" placeholder="     Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true></ion-textarea>
 
-      <app-bt-admin-small class="viewAttached" [text]="'Visualizza allegato'"></app-bt-admin-small>
-      <app-bt-admin-small class="close" [text]="'Chiudi'"  [routerLink]="['/admin/request-history']"></app-bt-admin-small>
-
+    <ion-grid class="buttons-grid">
+      <ion-row>
+        <ion-col class="left-col">
+          <ion-button class="visualize-attached">Visualizza<br/>Allegato</ion-button>
+        </ion-col>
+        <ion-col class=right-col>
+          <app-bt-admin-small shape="round"  clear [text]="'Chiudi'" [routerLink]="['/admin/request-history']"></app-bt-admin-small>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
