--- a/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.scss
+++ b/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.scss
@@ -1,30 +1,34 @@
-p{
-  margin-top: 1vh;;
+.title {
+  text-align: center;
+  margin-top: 8vh;
+  font-weight: bold;
 }
 
-h2{
-  margin-top: 2.5vh;
+.left-col {
+  margin-right: 1vh;
 }
 
-.taskbar {
-  --background: var(--ion-color-grey);
+.right-col {
+  margin-left: 1vh;
+}
+
+.visualize-attached {
+  color: var(--ion-color-white);
+  --background: var(--ion-color-admin);
   font-size: 22px;
   --border-radius: 28px;
 
   height: 64px;
-  width: 90%;
-  margin-top: 6vh;
+  width: 150px;
 
+  margin-bottom: 1vh;
+
+  color: black;
+  font-weight: bold;
 }
 
-.pointsbar {
-  --background: var(--ion-color-grey);
-  font-size: 22px;
-  --border-radius: 28px;
-
-  height: 64px;
-  width: 90%;
-  margin-top: 2vh;
+.buttons-grid {
+  margin-top: 3vh;
 }
 
 ion-textarea{
@@ -34,28 +38,23 @@ ion-textarea{
   height: 18vh;
   width: 80%;
 
+  margin-top: 3vh;
+  text-indent: 3vh;
+}
+
+.elementbar {
+  height: 64px;
+  width: 90%;
+}
+
+.space-div {
   margin-top: 2vh;
 }
 
-.viewAttached{
-  position: absolute;
-
-  margin-top: 88vh;
-  margin-right: 50%;
-
+.div-element-bar {
+  margin-top: 10vh;
 }
 
-.close{
-  position: absolute;
-
-  margin-top: 88vh;
-  margin-left: 50%;
-}
-
-ion-alert.custom-alert {
-  --backdrop-opacity: 0.6;
-}
-
-.custom-alert .alert-button-group {
-  padding: 8px;
+.leftIcon {
+  --background: var(--ion-color-admin);
 }
