added back buttton

--- a/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
 
-    <ion-button class="leftIcon" [routerLink]="['/user/notifications']">
+    <ion-button class="leftIcon" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
