--- a/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
+++ b/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
@@ -1,20 +1,30 @@
-
 <ion-content [fullscreen]="true">
-  <div class="back">
-    
-    <ion-button class="leftIcon" (click)="backButton()" fill="clear">
+  <div class="backgroundUser">
+
+    <ion-button class="leftIcon" fill="clear" (click)="backButton()">
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
-    <h1 align="center" class="task">Task completato <br> da [nome utente]</h1>
+    <h1 class="title">Task completato da<br/>[Nome Utente]</h1>
 
-   <app-user-element-bar class="taskbar" [buttonText] = "'Task'" [labelText]="'[nome Task]'"></app-user-element-bar>
-   <app-user-element-bar class="pointsbar" [buttonText] = "'Punti'" [labelText]="'[punti]'"></app-user-element-bar>
-   
-    <ion-textarea  fill="outline" placeholder="Descrizione" shape="round" [readonly] = true class="descrizione"></ion-textarea>
-    <ion-textarea  fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true class="commento"></ion-textarea>
+    <div class="div-element-bar">
+      <app-user-element-bar class="elementbar" [buttonText]="'Task'" [labelText]="'[Nome Task]'"></app-user-element-bar>
+      <div class="space-div"></div>
+      <app-user-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="'[Punti]'"></app-user-element-bar>
+    </div>
 
-    <app-bt-user-small id="present-alert" class="viewAttached" [text]="'Allegato'"></app-bt-user-small>
-    <app-bt-user-small class="close" [text]="'Chiudi'" (click)="backButton()" fill="clear"></app-bt-user-small>
+    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder="Commento" shape="round" [readonly] = true></ion-textarea>
+
+    <ion-grid class="buttons-grid">
+      <ion-row>
+        <ion-col class="left-col">
+          <ion-button class="visualize-attached">Visualizza<br/>Allegato</ion-button>
+        </ion-col>
+        <ion-col class=right-col>
+          <app-bt-user-small shape="round"  clear [text]="'Chiudi'" (click)="backButton()"></app-bt-user-small>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
