--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
 
   <div class="backgroundUser">
-    <ion-button class="leftIcon">
+    <ion-button class="leftIcon" (click)="backButton()">
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
