--- a/frontend/Rank-Up/src/app/components/admin-insert-bar/admin-insert-bar.component.html
+++ b/frontend/Rank-Up/src/app/components/admin-insert-bar/admin-insert-bar.component.html
@@ -1,4 +1,4 @@
 <ion-item class="item">
   <ion-label class="label">{{labelText}}</ion-label>
-  <ion-button class="button">{{buttonText}}</ion-button>
+  <ion-button class="button" slot="end">{{buttonText}}</ion-button>
 </ion-item>
