--- a/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.scss
+++ b/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.scss
@@ -8,11 +8,13 @@
 .nameUser {
     font-size: 20px;
     color: var(--ion-color-black);
+    font-weight: bold;
 }
 
 .scoreUser {
     margin-top: 4vh;
     font-size: 25px;
+    font-weight: bold;
 }
 
 .listBox {
