--- a/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
+++ b/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
@@ -39,8 +39,8 @@
           </ion-input>
         </ion-button>
         <div>
-          <app-bt-admin-small text="Annulla" (click)="closeModal()"></app-bt-admin-small>
-          <app-bt-user-small text="Conferma" (click)="attach()"></app-bt-user-small>
+          <app-bt-admin-small text="Annulla" (click)="closeModal()" style="margin-right: 0.5vh;"></app-bt-admin-small>
+          <app-bt-user-small text="Conferma" (click)="attach()" style="margin-left: 0.5vh;"></app-bt-user-small>
         </div>
       </div>
     </ion-content>
