--- a/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.scss
+++ b/frontend/Rank-Up/src/app/pending-tasks/pending-tasks.page.scss
@@ -36,10 +36,7 @@ img {
 }
 
 .title{
-    margin-top: 7vh;
-}
-
-.subtitle{
+    margin-top: 8vh;
+    text-align: center;
     font-weight: bold;
-    margin-top: -1vh;
 }
