--- a/frontend/Rank-Up/src/app/signup/signup.page.html
+++ b/frontend/Rank-Up/src/app/signup/signup.page.html
@@ -7,6 +7,9 @@
 
     <div class="signup">
       <h3 class="titolo">Registrazione</h3>
+      <ul *ngIf="errorCheck">
+        Username già in uso o campi mancanti
+     </ul>
       <ion-input [(ngModel)]="user.name" [type]="'text'" [placeholder]="'Nome'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.surname" [type]="'text'" [placeholder]="'Cognome'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.email" [type]="'text'" [placeholder]="'Email'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
