--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -26,11 +26,12 @@
     <div class="listBox" *ngIf="stato">
       <ion-list class="list" lines="none">
         <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index">
-          <ion-item class="item">
-
+          <ion-item class="item" [routerLink]="['/admin/admin-profile']">
+            <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             <ion-label class="nomeUtente">Utente {{i+1}}</ion-label>
-            <h3>{{i+2*i+3}}</h3>
+            <ion-label class="points-label">{{i+2*i+3}}</ion-label>
+            </div>
 
           </ion-item>
           <ion-item-options side="end">
@@ -45,12 +46,12 @@
     <div class="listBox" *ngIf="!stato">
       <ion-list class="list" lines="none">
         <ion-item-sliding *ngFor="let item of [].constructor(14); let i = index">
-          <ion-item class="item">
-
+          <ion-item class="item" [routerLink]="['/admin/admin-profile']">
+            <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             <ion-label class="nomeUtente">Utente {{i+1}}</ion-label>
-            <h3>{{32}}</h3>
-
+            <ion-label class="points-label">32</ion-label>
+            </div>
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option>
