--- a/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
@@ -9,13 +9,12 @@
       <ion-icon name="add-circle-outline" size="large" color="dark"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Premi</h1>
-    <h1 class="subtitle">[Nome Team]</h1>
+    <h1 class="title">Premi<br/>[Nome Team]</h1>
 
     <div class="listBox">
       <ion-list>
         <ion-item class="item" *ngFor="let item of [].constructor(15); let i = index">
-          <ion-label class="label">Caffè offerto</ion-label>
+          <ion-label class="label">[Nome Premio]</ion-label>
           <ion-button class="fakebutton" [disabled]="true">46 pt</ion-button>
         </ion-item>
       </ion-list>
