--- a/frontend/Rank-Up/src/app/create-task/create-task.page.html
+++ b/frontend/Rank-Up/src/app/create-task/create-task.page.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="create-task-button">
-        <app-bt-admin-small text="Crea Task" [routerLink]="['/admin/team-rules-tasks']"></app-bt-admin-small>
+        <app-bt-admin-small text="Crea Task" (click)="backButton()"></app-bt-admin-small>
       </div>
     </div>
   
