--- a/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
+++ b/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
@@ -19,9 +19,9 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Richesta [utente] per [attività]</h1>
+    <h1 class="title">Richiesta [Nome Utente]<br/>per [Nome Attività]</h1>
     <ion-button slot="start" class="btn">Vedi Allegato</ion-button>
-    <ion-button class="notBtn">Data: 01/05/2023</ion-button>
+    <ion-button class="notBtn">Data: [Data]</ion-button>
 
     <div class="subTitle">Accettare richiesta di completamento?</div>
     <div class="pulsanteBox">
