--- a/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.scss
+++ b/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.scss
@@ -1,10 +1,15 @@
+.title {
+    margin-top: 10vh;
+    text-align: center;
+}
+
 .btn {
     --background: var(--ion-color-grey);
     font-size: 20px;
     color: var(--ion-color-black);
     --border-radius: 28px;
 
-    margin-top: 15vh;
+    margin-top: 10vh;
     height: 64px;
     width: 80%;
 }
