--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">Nome team</h1>
+    <h1 class="title">[Nome Team]</h1>
 
     <ion-button class="rightIcon" *ngIf="!stato" [routerLink] = "['/create-rule']">
       <ion-icon name="add-circle-outline" size="large" class="iconaRicerca"></ion-icon>
@@ -25,38 +25,22 @@
       </ion-segment>
     </div>
 
-    <div class="listBox" *ngIf="stato">
-      <ion-list class="list" lines="none">
-        <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index">
-          <ion-item class="item">
-
-            <app-admin-insert-bar slot="end" [labelText]="'Nome task'" [buttonText]="'+0'"></app-admin-insert-bar>
-
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
+    <div id="div-rules-tasks" scroll="true" *ngIf="!stato">
+      <div id="div-rule-task" *ngFor="let item of [].constructor(8); let i = index">
+        <div id="div-div-rules-tasks">
+          <div id="div-div-rules-tasks-name" >[Nome Regola]</div>
+          <ion-button id="div-div-rules-tasks-button">15</ion-button>
+        </div>
+      </div>
     </div>
 
-    <div class="listBox" *ngIf="!stato">
-      <ion-list class="list" lines="none">
-        <ion-item-sliding *ngFor="let item of [].constructor(14); let i = index">
-          <ion-item class="item">
-
-            <app-admin-insert-bar slot="end" [labelText]="'Nome regola'" [buttonText]="'+0'"></app-admin-insert-bar>
-
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
+    <div id="div-rules-tasks" scroll="true" *ngIf="stato">
+      <div id="div-rule-task" *ngFor="let item of [].constructor(8); let i = index">
+        <div id="div-div-rules-tasks">
+          <div id="div-div-rules-tasks-name" >[Nome Task]</div>
+          <ion-button id="div-div-rules-tasks-button">10</ion-button>
+        </div>
+      </div>
     </div>
   </div>
 </ion-content>
