--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.scss
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.scss
@@ -1,3 +1,8 @@
+.title {
+  text-align: center;
+  margin-top: 8vh;
+}
+
 .listBox {
   width: 90%;
   height: 53vh;
@@ -45,4 +50,79 @@ ion-segment-button {
 
 .segmentText {
   font-size: 1.9vh;
+}
+
+#div-team-name {
+  font-size: 1.2em;
+}
+
+#div-code {
+  font-size: 0.8em;
+  color: var(--ion-color-black);
+}
+
+#div-choice-bar {
+  margin-top: 11vh;
+}
+
+#div-rule-task {
+  margin-top: 2vh;
+}
+
+#div-rules-tasks {
+  margin-top: 2vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 50%;
+}
+
+
+#div-prizes {
+  margin-top: 2vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 50%;
+}
+
+#div-div-rules-tasks {
+  background-color: var(--ion-color-grey);
+  font-size: 2vh;
+  border-radius: 28px;
+
+  height: 8vh;
+  width: 80vw;
+}
+
+
+
+#div-div-rules-tasks-name {
+  height: 8vh;
+  font-size: 2vh;
+  color: var(--ion-color-black);
+  margin: 0;
+  width: 60%;
+  float: left;
+  padding-left: 5vw;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
+
+#div-div-rules-tasks-button {
+  --background: var(--ion-color-admin);
+  font-size: 2vh;
+  --border-radius: 28px;
+
+  color: var(--ion-color-black);
+
+  height: 8vh;
+  width: 40%;
+
+  margin: 0;
+  margin-right: -10;
+  top: 0;
+  right: 0;
+  float: left;
+  font-size: 20px;
+  font-weight: bold;
 }
