--- a/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.html
@@ -8,7 +8,7 @@
     <h1 class="title">Regola completato da<br/>[Nome Utente]</h1>
 
     <div class="div-element-bar">
-      <app-user-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="'[Regola]'"></app-user-element-bar>
+      <app-user-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="'[Nome Regola]'"></app-user-element-bar>
       <div class="space-div"></div>
       <app-user-element-bar class="elementbar" [buttonText]="'Punti'" [labelText]="'[Punti]'"></app-user-element-bar>
     </div>
