--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -1,3 +1,15 @@
+.title {
+    font-weight: bold;
+    text-align: center;
+    margin-top: 8vh;
+}
+
+.team-code {
+    text-align: center;
+    font-size: medium;
+    margin-top: 0vh;
+}
+
 .search{
     margin-top: 1vh;
     align-items: center;
