--- a/frontend/Rank-Up/src/app/team/team.page.scss
+++ b/frontend/Rank-Up/src/app/team/team.page.scss
@@ -1,3 +1,15 @@
+.title {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 8vh;
+}
+
+.team-code {
+    text-align: center;
+    font-size: medium;
+    margin-top: 0vh;
+}
+
 .team{
     margin-top: 5vh;
   color: black;
