--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -26,21 +26,41 @@
     </div>
 
     <div id="div-rules-tasks" scroll="true" *ngIf="!stato">
-      <div id="div-rule-task" *ngFor="let item of [].constructor(8); let i = index">
-        <div id="div-div-rules-tasks">
-          <div id="div-div-rules-tasks-name" >[Nome Regola]</div>
-          <ion-button id="div-div-rules-tasks-button">15</ion-button>
-        </div>
-      </div>
+      <ion-list class="list">
+        <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index">
+          <ion-item id="div-rule-task">
+          <div id="div-div-rules-tasks">
+            <div id="div-div-rules-tasks-name">[Nome Regola]</div>
+            <ion-button id="div-div-rules-tasks-button">+15</ion-button>
+          </div>
+
+        </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option>
+              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </div>
 
-    <div id="div-rules-tasks" scroll="true" *ngIf="stato">
-      <div id="div-rule-task" *ngFor="let item of [].constructor(8); let i = index">
-        <div id="div-div-rules-tasks">
-          <div id="div-div-rules-tasks-name" >[Nome Task]</div>
-          <ion-button id="div-div-rules-tasks-button">10</ion-button>
-        </div>
-      </div>
+    <div class="div-rules-tasks" scroll="true" *ngIf="stato">
+      <ion-list class="list">
+        <ion-item-sliding *ngFor="let item of [].constructor(7); let i = index">
+          <ion-item id="div-rule-task">
+          <div id="div-div-rules-tasks">
+            <div id="div-div-rules-tasks-name">[Nome Task]</div>
+            <ion-button id="div-div-rules-tasks-button">+15</ion-button>
+          </div>
+
+        </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option>
+              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </div>
   </div>
 </ion-content>
