--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundUser">
 
-    <ion-button class="leftIcon" [routerLink]="['/user/notifications']">
+    <ion-button class="leftIcon" [routerLink]="['/notifications']">
       <ion-icon name="notifications-outline" size="large"></ion-icon>
     </ion-button>
 
