--- a/frontend/Rank-Up/src/app/request-history/request-history.page.scss
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.scss
@@ -52,7 +52,7 @@
 }
 
 .itemadmin {
-    --background: var(--ion-color-light-admin);
+    --background: rgb(252, 147, 147);
     --border-radius: 28px;
 
     margin: 0;
@@ -65,7 +65,7 @@
 }
 
 .itemuser {
-    --background: var(--ion-color-light-user);
+    --background: rgb(138, 205, 138);
     --border-radius: 28px;
 
     margin: 0;
