--- a/frontend/Rank-Up/src/app/team/team.page.scss
+++ b/frontend/Rank-Up/src/app/team/team.page.scss
@@ -8,6 +8,7 @@
     text-align: center;
     font-size: medium;
     margin-top: 0vh;
+    font-size: 0.8em;
 }
 
 .team{
@@ -23,6 +24,8 @@
 
     width: 20vh;
     height: 20vh;
+
+    font-weight: bold;
 }
 
 .squareList{
@@ -36,6 +39,8 @@
 
     width: 20vh;
     height: 20vh;
+
+    font-weight: bold;
 }
 
 .task{
@@ -52,6 +57,7 @@
     width: 35vh;
     height: 13vh;
     margin-top: 35vh;
+
 }
 
 .item{
@@ -70,6 +76,7 @@
     width: 20vh;
     height: 10vh;
     font-size: large;
+    font-weight: bold;
 }
 
 .iconaRegole{
