--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -1,12 +1,13 @@
 .title {
     font-weight: bold;
     text-align: center;
-    margin-top: 8vh;
+    margin-top: 20vh;
+    padding-top: 1vh;
 }
 
 .team-code {
     text-align: center;
-    font-size: medium;
+    font-size: 0.8em;
     margin-top: 0vh;
 }
 
@@ -25,7 +26,7 @@
 }
 
 .search{
-    margin-top: 1vh;
+    margin-top: 0vh;
     align-items: center;
     width: 85%;
 }
